--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,15 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "instaR"]
+	path = instaR
+	url = https://github.com/pablobarbera/instar
+	shallow = true
+	subdir = instaR
+	registered = true
+[submodule "Rfacebook"]
+	path = Rfacebook
+	url = https://github.com/pablobarbera/rfacebook
+	shallow = true
+	subdir = Rfacebook
+	registered = true
